deploy/manifests/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend-deployment
  labels:
    env: dev
