deploy/manifests/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
  labels:
    env: dev
